# iris_crazyflie_ros

src/Multi-Drones-system/: README.md
src/Multi-Drones-system/rotors_description/urdf/: component_snippets.xacro  iris_base.xacro  mav_generic_odometry_sensor.gazebo
src/Multi-Drones-system/rotors_gazebo/goals/: goals.yaml  user_goals.csv
src/Multi-Drones-system/rotors_gazebo/launch/: Multi_robot.launch  iris_navi.launch  mav.launch  spawn_mav.launch
src/Multi-Drones-system/rotors_gazebo/map/: fullmap.yaml
src/Multi-Drones-system/rotors_gazebo/models/new_world/: model.sdf
src/Multi-Drones-system/rotors_gazebo/rviz/: drones.rviz
src/Multi-Drones-system/rotors_gazebo/scripts/: mapping.py  new_info.py  new_laser.py  new_points.py  new_velocity.py  planner_final.py  scan.py  test_findwall.py  test_vel_pub.py  tsp.py  tsp_11.py  velocity_publisher.py
src/Multi-Drones-system/rotors_gazebo/worlds/: gmap.world  longhall.world  test1.world  test2.world  tsp_new.world
src/Multi-Drones-system/rotors_msgs/: CMakeLists.txt  package.xml
src/Multi-Drones-system/rotors_msgs/msg/: min_val.msg
