<?xml version="1.0"?>
<package>
  <name>rotors_msgs</name>
  <version>0.0.1</version>
  <description>Messages exclusive for rotors pacakge </description>
  <maintainer email="harsh.kakashniya@gmail.com">Harsh Kakashaniya</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jackal_msgs</url> -->
  <author email="harsh.kakashniya@gmail.com">Harsh Kakashaniya</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
